@@ -1,3 +1,6 @@
+2009-09-06  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/ext/fdo-menu.jl: Partial rewrite of fdo-menu [Matthew Love]
+
 2009-09-05  Christopher Bratusek <zanghar@freenet.de>
 	* sawfish.spec.in: improved [Kim B. Heino]
 
